fix(comment-overflow): fix comment & chatmessage overflow by using word-break: break-word;

--- a/app/client/stylesheets/components/ChatMessage.scss
+++ b/app/client/stylesheets/components/ChatMessage.scss
@@ -1,6 +1,7 @@
 .pa-ChatMessage {
     padding: 9px 15px;
     line-height: 20px;
+    word-break: break-word;
 
     p, &__chattime {
         display: inline-block;
