--- a/app/client/stylesheets/components/PartupUpdateComment.scss
+++ b/app/client/stylesheets/components/PartupUpdateComment.scss
@@ -5,6 +5,7 @@
     margin-top: -2px;
     margin-bottom: -4px;
     min-height: $avatar-width;
+    word-break: break-word;
 
     .pa-Avatar {
         width: $avatar-width;
